--- a/misc/docker/dockerfile
+++ b/misc/docker/dockerfile
@@ -7,13 +7,11 @@ FROM node:16.16.0-alpine
 RUN apk update &&\
     apk add --no-cache build-base git python3 bash
 
-WORKDIR /src/app
+WORKDIR /app
 
 COPY . .
 
 RUN npm install -g npm@latest
 RUN yarn install
 
-VOLUME [ "/mock" ]
-
-CMD [ "node /src/app/src/bin/www" ]
+VOLUME [ "/app/mock" ]
