--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.20"
+    "express-pino-logger": "^7.0.0",
+    "nodemon": "^2.0.20",
+    "pino": "^8.7.0"
   }
 }
